--- a/artcn.html
+++ b/artcn.html
@@ -56,9 +56,11 @@
 				<tr>
 					<td>
 						<a href="http://www.ices.fudan.edu.cn/ab/e0/c6812a175072/page.htm" target="_blank" rel="noopener noreferrer"><b>德国中国话剧戏剧节（法兰克福）</b></a><br>担任评委/舞台表演讲座Workshop<br><br>
-						&#9679; <a href="https://ices.fudan.edu.cn/ab/e0/c6812a175072/page.htm" target="_blank" rel="noopener noreferrer">第三届（复旦大学报导）</a><br>
-						&#9679; <a href="https://www.ccc-paris.org/zh/2019%E5%B9%B46%E6%9C%887%E6%97%A5%E8%87%B38%E6%97%A5/" target="_blank" rel="noopener noreferrer">第三届（巴黎中国文化中心报导）</a><br>
-						&#9679; <a href="https://www.163.com/dy/article/HC80FBKK0514A015.html" target="_blank" rel="noopener noreferrer">第六届（文化部中国文化网报导）</a>
+						&#9679; 第三届 <a href="https://www.ccc-paris.org/zh/2019%E5%B9%B46%E6%9C%887%E6%97%A5%E8%87%B38%E6%97%A5/" target="_blank" rel="noopener noreferrer">巴黎中国文化中心</a> 
+						<a href="https://ices.fudan.edu.cn/ab/e0/c6812a175072/page.htm" target="_blank" rel="noopener noreferrer">复旦大学报导</a><br>
+						&#9679; 第六届 <a href="https://www.163.com/dy/article/HC80FBKK0514A015.html" target="_blank" rel="noopener noreferrer">文化部中国文化网</a> 
+						<a href="https://www.ci.fudan.edu.cn/ec/e2/c569a453858/page.htm" target="_blank" rel="noopener noreferrer">复旦大学报导 </a>
+						
 					</td>
 					<td><a href="images/FrankfurtKonfuzius.png" target="_blank" rel="noopener noreferrer"><img src="images/FrankfurtKonfuzius.png" width="350"></a></td>
 				</tr>
