--- a/students.html
+++ b/students.html
@@ -40,7 +40,7 @@
 
 			<tr>
 				<td align="center">
-					<img src="images/students/Yale_Hartmann.jpeg" width="150"></a><br>
+					<img src="images/students/Yale_Hartmann.jpg" width="150"></a><br>
 					&copy;<b>Yale Hartmann</b>
 				</td>
 				<td>
@@ -83,7 +83,7 @@
 
 			<tr>
 				<td align="center">
-					<img src="images/students/Timo_Urban.png" width="150"></a><br>
+					<img src="images/students/Timo_Urban.jpg" width="150"></a><br>
 					&copy;<b>Timo Urban</b>
 				</td>
 				<td>
@@ -164,7 +164,7 @@
 
 			<tr>
 				<td align="center">
-					<img src="images/students/Wei_Wang.png" width="150"></a><br>
+					<img src="images/students/Wei_Wang.jpg" width="150"></a><br>
 					&copy;<b>Wei Wang</b>
 				</td>
 				<td>
@@ -177,7 +177,7 @@
 
 			<tr>
 				<td align="center">
-					<img src="images/students/Daniel_Osorio.png" width="150"></a><br>
+					<img src="images/students/Daniel_Osorio.jpg" width="150"></a><br>
 					&copy;<b>Daniel Faustino de Noronha Osório</b>
 				</td>
 				<td>
@@ -203,7 +203,7 @@
 
 			<tr>
 				<td align="center">
-					<img src="images/students/Romina_Razeghi_Oskouei.png" width="150"></a><br>
+					<img src="images/students/Romina_Razeghi_Oskouei.jpg" width="150"></a><br>
 					&copy;<b>Romina Razeghi Oskouei</b>
 				</td>
 				<td>
@@ -227,7 +227,7 @@
 
 			<tr>
 				<td align="center">
-					<img src="images/students/Anantha_Sripada_Abhinav_Veldanda.png" width="150"></a><br>
+					<img src="images/students/Anantha_Sripada_Abhinav_Veldanda.jpg" width="150"></a><br>
 					<b>Anantha Sripada Abhinav Veldanda</b>
 				</td>
 				<td>
@@ -242,7 +242,18 @@
 
 			<tr>
 				<td align="center">
-					<img src="images/students/Johann_Joachim_Keuneke.png" width="150"></a><br>
+					<img src="images/students/Ciwan_Gülpinar.jpg" width="150"></a><br>
+					&copy;<b>Ciwan Gülpinar</b>
+				</td>
+				<td>
+					Bachelor thesis 2022 @ Bremen, Germany<br>
+					&nbsp;&nbsp;&nbsp;&nbsp;&#9679; Master student @ University of Bremen<br>
+				</td>
+			</tr>
+
+			<tr>
+				<td align="center">
+					<img src="images/students/Johann_Joachim_Keuneke.jpg" width="150"></a><br>
 					<b>Johann Joachim Keuneke</b>
 				</td>
 				<td>
@@ -253,7 +264,7 @@
 
 			<tr>
 				<td align="center">
-					<img src="images/students/Daniel_Ott.png" width="150"></a><br>
+					<img src="images/students/Daniel_Ott.jpg" width="150"></a><br>
 					<b>Daniel Ott</b>
 				</td>
 				<td>
@@ -276,7 +287,7 @@
 
 			<tr>
 				<td align="center">
-					<img src="images/students/Hannes_Wehrmann.png" width="150"></a><br>
+					<img src="images/students/Hannes_Wehrmann.jpg" width="150"></a><br>
 					<b>Hannes Wehrmann</b>
 				</td>
 				<td>
@@ -300,18 +311,7 @@
 
 			<tr>
 				<td align="center">
-					<img src="images/students/Ciwan_Gülpinar.jpg" width="150"></a><br>
-					&copy;<b>Ciwan Gülpinar</b>
-				</td>
-				<td>
-					Graduation research in progress<br>
-					&nbsp;&nbsp;&nbsp;&nbsp;&#9679; Biosignal visualization and interaction in VR<br>
-				</td>
-			</tr>
-
-			<tr>
-				<td align="center">
-					<img src="images/students/Thorben_Lorenzen.png" width="150"></a><br>
+					<img src="images/students/Thorben_Lorenzen.jpg" width="150"></a><br>
 					&copy;<b>Thorben Lorenzen</b>
 				</td>
 				<td>
@@ -379,7 +379,29 @@
 				</td>
 			</tr>
 
-			
+			<tr>
+				<td align="center">
+					<img src="images/students/Arthur_Belousov.jpg" width="150"></a><br>
+					<b>@Arthur Belousov</b>
+				</td>
+				<td>
+					Graduation research in progress<br>
+					&nbsp;&nbsp;&nbsp;&nbsp;&#9679; Piano audio-based automatic score generation 
+					<br><br>
+				</td>
+			</tr>
+
+			<tr>
+				<td align="center">
+					<img src="images/students/Aklima_Akter.jpg" width="150"></a><br>
+					<b>@Aklima Akter</b>
+				</td>
+				<td>
+					Graduation research in progress<br>
+					&nbsp;&nbsp;&nbsp;&nbsp;&#9679; Advanced data processing for Wi-Fi-based HAR
+				</td>
+			</tr>
+
 			<!--
 			<tr>
 				<td align="center">
