--- a/studentscn.html
+++ b/studentscn.html
@@ -16,7 +16,7 @@
 	<body background="images/Sunburst.svg" link="#000000" alink="#0080FF" vlink = "#000000">
 		<table align="left" cellpadding="15">
 			<tr><td align="center" colspan="2">
-				<h1>刘辉的科研小组：指导的科研助理以及毕设学生</h1>
+				<h1>刘辉的科研小组：指导的科研助理以及毕设学生 <a href="students.html"><img src="images/EN.svg" height="20"></a></h1>
 			</td></tr>
 
 			<tr><td align="center" colspan="2">
@@ -40,7 +40,7 @@
 
 			<tr>
 				<td align="center">
-					<img src="images/students/Yale_Hartmann.jpeg" width="150"></a><br>
+					<img src="images/students/Yale_Hartmann.jpg" width="150"></a><br>
 					&copy;<b>Yale Hartmann（德）</b>
 				</td>
 				<td>
@@ -82,7 +82,7 @@
 
 			<tr>
 				<td align="center">
-					<img src="images/students/Timo_Urban.png" width="150"></a><br>
+					<img src="images/students/Timo_Urban.jpg" width="150"></a><br>
 					&copy;<b>Timo Urban（德）</b>
 				</td>
 				<td>
@@ -163,7 +163,7 @@
 
 			<tr>
 				<td align="center">
-					<img src="images/students/Wei_Wang.png" width="150"></a><br>
+					<img src="images/students/Wei_Wang.jpg" width="150"></a><br>
 					&copy;<b>王薇</b>
 				</td>
 				<td>
@@ -176,7 +176,7 @@
 
 			<tr>
 				<td align="center">
-					<img src="images/students/Daniel_Osorio.png" width="150"></a><br>
+					<img src="images/students/Daniel_Osorio.jpg" width="150"></a><br>
 					&copy;<b>Daniel Faustino de Noronha Osório（葡）</b>
 				</td>
 				<td>
@@ -202,7 +202,7 @@
 
 			<tr>
 				<td align="center">
-					<img src="images/students/Romina_Razeghi_Oskouei.png" width="150"></a><br>
+					<img src="images/students/Romina_Razeghi_Oskouei.jpg" width="150"></a><br>
 					&copy;<b>Romina Razeghi Oskouei（伊朗）</b>
 				</td>
 				<td>
@@ -226,7 +226,7 @@
 
 			<tr>
 				<td align="center">
-					<img src="images/students/Anantha_Sripada_Abhinav_Veldanda.png" width="150"></a><br>
+					<img src="images/students/Anantha_Sripada_Abhinav_Veldanda.jpg" width="150"></a><br>
 					<b>Anantha Sripada Abhinav Veldanda（印）</b>
 				</td>
 				<td>
@@ -241,7 +241,20 @@
 
 			<tr>
 				<td align="center">
-					<img src="images/students/Johann_Joachim_Keuneke.png" width="150"></a><br>
+					<img src="images/students/Ciwan_Gülpinar.jpg" width="150"></a><br>
+					&copy;<b>Ciwan Gülpinar（德；库尔德）</b>
+				</td>
+				<td>
+					本科毕设 2023 @ 德国不来梅<br>
+					&nbsp;&nbsp;&nbsp;&nbsp;&#9679; 元宇宙中生物信号的可视化和交互<br>
+					<br><br>
+					&rarr; 硕士研究生 @ 不来梅大学
+				</td>
+			</tr>
+
+			<tr>
+				<td align="center">
+					<img src="images/students/Johann_Joachim_Keuneke.jpg" width="150"></a><br>
 					<b>Johann Joachim Keuneke（德）</b>
 				</td>
 				<td>
@@ -252,7 +265,7 @@
 
 			<tr>
 				<td align="center">
-					<img src="images/students/Daniel_Ott.png" width="150"></a><br>
+					<img src="images/students/Daniel_Ott.jpg" width="150"></a><br>
 					<b>Daniel Ott（德）</b>
 				</td>
 				<td>
@@ -275,7 +288,7 @@
 
 			<tr>
 				<td align="center">
-					<img src="images/students/Hannes_Wehrmann.png" width="150"></a><br>
+					<img src="images/students/Hannes_Wehrmann.jpg" width="150"></a><br>
 					<b>Hannes Wehrmann（德）</b>
 				</td>
 				<td>
@@ -299,18 +312,7 @@
 
 			<tr>
 				<td align="center">
-					<img src="images/students/Ciwan_Gülpinar.jpg" width="150"></a><br>
-					&copy;<b>Ciwan Gülpinar（德；库尔德）</b>
-				</td>
-				<td>
-					毕设进行<br>
-					&nbsp;&nbsp;&nbsp;&nbsp;&#9679; 元宇宙中生物信号的可视化和交互<br>
-				</td>
-			</tr>
-
-			<tr>
-				<td align="center">
-					<img src="images/students/Thorben_Lorenzen.png" width="150"></a><br>
+					<img src="images/students/Thorben_Lorenzen.jpg" width="150"></a><br>
 					&copy;<b>Thorben Lorenzen（德）</b>
 				</td>
 				<td>
@@ -378,10 +380,33 @@
 				</td>
 			</tr>
 
+			<tr>
+				<td align="center">
+					<img src="images/students/Arthur_Belousov.jpg" width="150"></a><br>
+					<b>@Arthur Belousov（德）</b>
+				</td>
+				<td>
+					毕设进行<br>
+					&nbsp;&nbsp;&nbsp;&nbsp;&#9679; 由钢琴弹奏音频自动生成乐谱
+					<br><br>
+				</td>
+			</tr>
+
+			<tr>
+				<td align="center">
+					<img src="images/students/Aklima_Akter.jpg" width="150"></a><br>
+					<b>@Aklima Akter（孟）</b>
+				</td>
+				<td>
+					毕设进行<br>
+					&nbsp;&nbsp;&nbsp;&nbsp;&#9679; 基于Wi-Fi人体动作识别中的高级数据处理
+				</td>
+			</tr>
+
 			<!--
 			<tr>
 				<td align="center">
-					<img src="images/students/.png" width="150"></a><br>
+					<img src="images/students/.jpg" width="150"></a><br>
 					<b></b>
 				</td>
 				<td>
