--- a/students.html
+++ b/students.html
@@ -169,6 +169,7 @@
 				</td>
 				<td>
 					Master thesis 2022 @ Hannover, Germany<br>
+					&nbsp;&nbsp;&nbsp;&nbsp;&#9679; Subsequence search<br>
 					&nbsp;&nbsp;&nbsp;&nbsp;&#9679; Automatic heart sound segmentation
 					<br><br>
 					&rarr; IT application developer @ Bosch, Eisenach
@@ -247,7 +248,9 @@
 				</td>
 				<td>
 					Bachelor thesis 2022 @ Bremen, Germany<br>
-					&nbsp;&nbsp;&nbsp;&nbsp;&#9679; Master student @ University of Bremen<br>
+					&nbsp;&nbsp;&nbsp;&nbsp;&#9679; Biosignals in VR
+					<br><br>
+					&rarr; Master student @ University of Bremen<br>
 				</td>
 			</tr>
 
@@ -270,7 +273,8 @@
 				<td>
 					Graduation research in progress<br>
 					&nbsp;&nbsp;&nbsp;&nbsp;&#9679; Symbolic music data processing<br>
-					&nbsp;&nbsp;&nbsp;&nbsp;&#9679; Gui design for singing assistance
+					&nbsp;&nbsp;&nbsp;&nbsp;&#9679; Gui design for singing assistance<br>
+					&nbsp;&nbsp;&nbsp;&nbsp;&#9679; User experience analysis
 				</td>
 			</tr>
 
@@ -293,7 +297,7 @@
 				<td>
 					Graduation research in progress<br>
 					&nbsp;&nbsp;&nbsp;&nbsp;&#9679; Jogging status recognition<br>
-					&nbsp;&nbsp;&nbsp;&nbsp;&#9679; HAR-based Sonification
+					&nbsp;&nbsp;&nbsp;&nbsp;&#9679; HAR-based sonification
 				</td>
 			</tr>
 
@@ -316,7 +320,7 @@
 				</td>
 				<td>
 					Graduation research in progress<br>
-					&nbsp;&nbsp;&nbsp;&nbsp;&#9679; EMG-based finger detection<br>
+					&nbsp;&nbsp;&nbsp;&nbsp;&#9679; EMG-based finger recognition<br>
 					&nbsp;&nbsp;&nbsp;&nbsp;&#9679; Piano edutainment
 				</td>
 			</tr>
@@ -328,8 +332,7 @@
 				</td>
 				<td>
 					Graduation research in progress<br>
-					&nbsp;&nbsp;&nbsp;&nbsp;&#9679; Generative AI<br>
-					&nbsp;&nbsp;&nbsp;&nbsp;&#9679; Automatic chord generation on symbolic melody
+					&nbsp;&nbsp;&nbsp;&nbsp;&#9679; LSTM-based main melody channel detection from MIDI
 				</td>
 			</tr>
 
@@ -375,7 +378,7 @@
 				</td>
 				<td>
 					Graduation research in progress<br>
-					&nbsp;&nbsp;&nbsp;&nbsp;&#9679; Evaluation of outlier detection algorithms 
+					&nbsp;&nbsp;&nbsp;&nbsp;&#9679; Outlier detection benchmark
 				</td>
 			</tr>
 
