--- a/studentscn.html
+++ b/studentscn.html
@@ -168,6 +168,7 @@
 				</td>
 				<td>
 					硕士毕设 2022 @ 德国汉诺威<br>
+					&nbsp;&nbsp;&nbsp;&nbsp;&#9679; 子序列搜索<br>
 					&nbsp;&nbsp;&nbsp;&nbsp;&#9679; 自动心音信号分割
 					<br><br>
 					&rarr; IT应用开发师 @ 博世（爱森纳赫）
@@ -271,7 +272,8 @@
 				<td>
 					毕设进行<br>
 					&nbsp;&nbsp;&nbsp;&nbsp;&#9679; 符号音乐处理<br>
-					&nbsp;&nbsp;&nbsp;&nbsp;&#9679; 演唱辅助的界面设计
+					&nbsp;&nbsp;&nbsp;&nbsp;&#9679; 演唱辅助的界面设计<br>
+					&nbsp;&nbsp;&nbsp;&nbsp;&#9679; 用户体验分析
 				</td>
 			</tr>
 
@@ -329,8 +331,7 @@
 				</td>
 				<td>
 					毕设进行<br>
-					&nbsp;&nbsp;&nbsp;&nbsp;&#9679; 生成模型<br>
-					&nbsp;&nbsp;&nbsp;&nbsp;&#9679; 基于符号旋律的自动和弦生成
+					&nbsp;&nbsp;&nbsp;&nbsp;&#9679; 基于LSTM的MIDI主旋律通道自动识别
 				</td>
 			</tr>
 
