--- a/research.html
+++ b/research.html
@@ -78,7 +78,8 @@
 						&#9679; Body Area Network (BAN)<br>
 						&#9679; Inertial sensors and Inertial Measurement Units (IMU)<br>
 						&#9679; Electromyography (EMG), electrogoniometers (EGM), and other sensors<br>
-						&#9679; Ubiquitous/pervasive computing
+						&#9679; Ubiquitous/pervasive computing<br>
+						&#9679; Facial EMG (fEMG) and Action Unit Recognition (AUR)
 					</td>
 				</tr>
 				<tr>
