--- a/researchcn.html
+++ b/researchcn.html
@@ -79,7 +79,8 @@
 						&#9679; 惯性传感器和惯性测量单元（IMU）<br>
 						&#9679; 肌电传感器（EMG）和电子量角器<br>
 						&#9679; 其它生物传感器<br>
-						&#9679; 普适计算
+						&#9679; 普适计算<br>
+						&#9679; 面部肌电图（fEMG）和动作单元识别（AUR）
 					</td>
 				</tr>
 				<tr>
