--- a/enkas/お.html
+++ b/enkas/お.html
@@ -388,7 +388,7 @@ Oh Oh I<br>
 （男）困らせる<br>
 （女）意地<ruby><rb>悪</rb><rt>わる</rt></ruby>ね<br>
 （男）分かるだろう<br>
-（男女）すねて甘えて　<ruby><rb>我儘</rb><rt>わが</rt></ruby>を<br>
+（男女）すねて甘えて　<ruby><rb>我儘</rb><rt>わがまま</rt></ruby>を<br>
 <br>
 （女）飲みすぎたのは　あなたのせいよ<br>
 （男）弱い女のいとしさを<br>
