--- a/publications.html
+++ b/publications.html
@@ -58,7 +58,7 @@
 	</tr></td>
 	<tr><td>
 		<i>Sensor-Based Human Activity and Behavior Research: Where Advanced Sensing and Recognition Technologies Meet.</i> Liu, H.*, Gamboa, H., and Schultz, T. (2023). Sensors, 23(1):125. MDPI.<br>
-		<a href="https://scholar.google.de/scholar?q=sensor-based+human+activity+and+behavior+research" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
+		<a href="https://scholar.google.com/scholar?q=sensor-based+human+activity+and+behavior+research" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
 		&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.semanticscholar.org/paper/Sensor-Based-Human-Activity-and-Behavior-Research%3A-Liu-Gamboa/d775d7f0105130e9f47ef95fd73d46243e385848" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
 		&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.researchgate.net/publication/366563962_Sensor-Based_Human_Activity_and_Behavior_Research_Where_Advanced_Sensing_and_Recognition_Technologies_Meet" target="_blank" rel="noopener noreferrer"><img src="images/ResearchGate.png" height="15"></a>
 		&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.mdpi.com/1424-8220/23/1/125" target="_blank" rel="noopener noreferrer"><img src="images/Sensors.png" height="15"></a>
@@ -96,11 +96,10 @@
 	<tr><td>
 		<i>Muscle Synergies in Joystick Manipulation.</i> Cai, L., Yan, S., Ouyang C., Zhang, T., Zhu, J., Chen, L., Ma, X.*, and Liu, H.* (2023). Frontiers in Physiology. <br>
 		<!--
-		<a href="" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
 		&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
-		&nbsp;&nbsp;&nbsp;&nbsp;
 		-->
-		<a href="https://www.researchgate.net/publication/374675206_Muscle_synergies_in_joystick_manipulation" target="_blank" rel="noopener noreferrer"><img src="images/ResearchGate.png" height="15"></a>
+		<a href="https://scholar.google.com/scholar?q=Muscle+Synergies+in+Joystick+Manipulation" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
+		&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.researchgate.net/publication/374675206_Muscle_synergies_in_joystick_manipulation" target="_blank" rel="noopener noreferrer"><img src="images/ResearchGate.png" height="15"></a>
 		&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.frontiersin.org/articles/10.3389/fphys.2023.1282295/full" target="_blank" rel="noopener noreferrer"><img src="images/Frontiers.png" height="15"></a>
 		&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.csl.uni-bremen.de/cms/publications/bibtexbrowser.php?key=cai2023joystick&bib=csl_all_publications.bib" target="_blank" rel="noopener noreferrer"><img src="images/CSL.svg" height="15"></a>
 		&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/doi.png" height="15"><a href="https://doi.org/10.3389/fphys.2023.1282295" target="_blank" rel="noopener noreferrer">10.3389/fphys.2023.1282295</a>
@@ -108,18 +107,17 @@
 	<tr><td>
 		<i>Outlier Detection Using Iterative Adaptive Mini-Minimum Spanning Tree Generation with Applications on Medical Data.</i> Li, J., Li, JW, Wang, C, Verbeek, F.J.*, Schultz T., and Liu H.* (2023). Frontiers in Physiology.<br>
 		<!--
-		<a href="" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
 		&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
-		&nbsp;&nbsp;&nbsp;&nbsp;
 		-->
-		<a href="https://www.researchgate.net/publication/374675183_Outlier_detection_using_iterative_adaptive_mini-minimum_spanning_tree_generation_with_applications_on_medical_data" target="_blank" rel="noopener noreferrer"><img src="images/ResearchGate.png" height="15"></a>
+		<a href="https://scholar.google.com/scholar?q=Outlier+Detection+Using+Iterative+Adaptive+Mini-Minimum+Spanning+Tree+Generation+with+Applications+on+Medical+Data" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
+		&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.researchgate.net/publication/374675183_Outlier_detection_using_iterative_adaptive_mini-minimum_spanning_tree_generation_with_applications_on_medical_data" target="_blank" rel="noopener noreferrer"><img src="images/ResearchGate.png" height="15"></a>
 		&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.frontiersin.org/articles/10.3389/fphys.2023.1233341/full" target="_blank" rel="noopener noreferrer"><img src="images/Frontiers.png" height="15"></a>
 		&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.csl.uni-bremen.de/cms/publications/bibtexbrowser.php?key=li2023outlier_detection&bib=csl_all_publications.bib" target="_blank" rel="noopener noreferrer"><img src="images/CSL.svg" height="15"></a>
 		&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/doi.png" height="15"><a href="https://doi.org/10.3389/fphys.2023.1233341" target="_blank" rel="noopener noreferrer">10.3389/fphys.2023.1233341</a>
 	</tr></td>
 	<tr><td>
 		<i>Efficient Wi-Fi-Based Human Activity Recognition Using Adaptive Antenna Elimination.</i> Jannat, M.K.A., Islam, M.S., Yang, S-H*, and Liu, H.* (2023). IEEE Access.<br>
-		<a href="https://scholar.google.de/scholar?q=Efficient+Wi-Fi-Based+Human+Activity+Recognition+Using+Adaptive+Antenna+Elimination" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
+		<a href="https://scholar.google.com/scholar?q=Efficient+Wi-Fi-Based+Human+Activity+Recognition+Using+Adaptive+Antenna+Elimination" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
 		&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.semanticscholar.org/paper/Efficient-Wi-Fi-Based-Human-Activity-Recognition-Jannat-Islam/02ff217d1dd6316596fc1da4b8f6a107ee5b7f06" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
 		&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.researchgate.net/publication/374244149_Efficient_Wi-Fi-Based_Human_Activity_Recognition_Using_Adaptive_Antenna_Elimination" target="_blank" rel="noopener noreferrer"><img src="images/ResearchGate.png" height="15"></a>
 		&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://ieeexplore.ieee.org/document/10265041" target="_blank" rel="noopener noreferrer"><img src="images/IEEE.png" height="15"></a>
@@ -128,7 +126,7 @@
 	</tr></td>
 	<tr><td>
 		<i>Hybrid Modeling on Reconstitution of Continuous Arterial Blood Pressure Using Finger Photoplethysmography.</i> Shi, W., Zhou, C., Zhang, Y., Li, K., Ren, X., Liu, H.*, and Ye, X.* (2023). Biomedical Signal Processing and Control, 85:104972. Elsevier.<br>
-		<a href="https://scholar.google.de/scholar?q=Hybrid+modeling+on+reconstitution+of+continuous+arterial+blood+pressure+using+finger+photoplethysmography" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
+		<a href="https://scholar.google.com/scholar?q=Hybrid+modeling+on+reconstitution+of+continuous+arterial+blood+pressure+using+finger+photoplethysmography" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
 		&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.semanticscholar.org/paper/Hybrid-modeling-on-reconstitution-of-continuous/72ac3930e09b7ec7008ea029cba28ae1ba709e54" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
 		&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.researchgate.net/publication/370529977_Hybrid_Modeling_on_Reconstitution_of_Continuous_Arterial_Blood_Pressure_Using_Finger_Photoplethysmography" target="_blank" rel="noopener noreferrer"><img src="images/ResearchGate.png" height="15"></a>
 		&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.sciencedirect.com/science/article/abs/pii/S1746809423004056?via%3Dihub" target="_blank" rel="noopener noreferrer"><img src="images/Elsevier.png" height="15" class="pop15"></a>
@@ -137,7 +135,7 @@
 	</tr></td>
 	<tr><td>
 		<i>Feature-Based Information Retrieval of Multimodal Biosignals with a Self-Similarity Matrix: Focus on Automatic Segmentation.</i> Rodrigues, J.*., Liu, H.* (co-first), Folgado, D., Belo, D., Schultz, T., and Gamboa, H.* (2022). Biosensors, 12(12):1182. MDPI.<br>
-		<a href="https://scholar.google.de/scholar?q=Feature-Based+Information+Retrieval+of+Multimodal+Biosignals+with+a+Self-Similarity+Matrix%3A+Focus+on+Automatic+Segmentation" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
+		<a href="https://scholar.google.com/scholar?q=Feature-Based+Information+Retrieval+of+Multimodal+Biosignals+with+a+Self-Similarity+Matrix%3A+Focus+on+Automatic+Segmentation" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
 		&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.semanticscholar.org/paper/Feature-Based-Information-Retrieval-of-Multimodal-a-Rodrigues-Liu/c824d095fbf7d9afdde8c36909fc70eb569f15c3" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
 		&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.researchgate.net/publication/366410597_Feature-Based_Information_Retrieval_of_Multimodal_Biosignals_with_a_Self-Similarity_Matrix_Focus_on_Automatic_Segmentation" target="_blank" rel="noopener noreferrer"><img src="images/ResearchGate.png" height="15"></a>
 		&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.mdpi.com/2079-6374/12/12/1182" target="_blank" rel="noopener noreferrer"><img src="images/Biosensors.png" height="15"></a>
@@ -199,7 +197,7 @@
 	</tr></td>
 	<tr><td>
 		<i>On a Real Real-Time Wearable Human Activity Recognition System.</i> Liu, H., Xue, T., and Schultz, T. (2023). In Proceedings of the 16th International Joint Conference on Biomedical Engineering Systems and Technologies - WHC, pages 711-720. INSTICC, SciTePress.<br> 
-		<a href="https://scholar.google.de/scholar?q=on+a+real+real-time+wearable+human+activity+recognition+system" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
+		<a href="https://scholar.google.com/scholar?q=on+a+real+real-time+wearable+human+activity+recognition+system" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
 		&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.semanticscholar.org/paper/On-a-Real-Real-Time-Wearable-Human-Activity-System-Liu-Xue/1c0648a61e011468faf3289fcee39ec66b2a4d43" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
 		&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.researchgate.net/publication/369015090_On_a_Real_Real-Time_Wearable_Human_Activity_Recognition_System" target="_blank" rel="noopener noreferrer"><img src="images/ResearchGate.png" height="15"></a>
 		&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://doi.org/10.5220/0011927700003414" target="_blank" rel="noopener noreferrer"><img src="images/SciTePress.png" height="15"></a>
