--- a/publications.html
+++ b/publications.html
@@ -25,7 +25,7 @@
 	</tr></td>
 	<tr><td>
 		<i>Sensors for Human Activity Recognition.</i> Liu, H., Gamboa, H., and Schultz, T. (2023). MDPI.<br>
-		<a href="https://www.semanticscholar.org/paper/Sensors-for-Human-Activity-Recognition/1a319b12e52a8a94de35cfcc16d48661630a86e2" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
+		<a href="https://www.google.de/books/edition/Sensors_for_Human_Activity_Recognition/jTID0AEACAAJ" target="_blank" rel="noopener noreferrer"><img src="images/GoogleBooks.png" height="15"></a>
 		&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.amazon.com/Sensors-Human-Activity-Recognition-Hui/dp/3036575545" target="_blank" rel="noopener noreferrer"><img src="images/Amazon.png" height="15"></a>
 		&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.researchgate.net/publication/372077993_Sensors_for_Human_Activity_Recognition" target="_blank" rel="noopener noreferrer"><img src="images/ResearchGate.png" height="15"></a>
 		&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.csl.uni-bremen.de/cms/publications/bibtexbrowser.php?key=liu2023sensors_har&bib=csl_all_publications.bib" target="_blank" rel="noopener noreferrer"><img src="images/CSL.svg" height="15"></a>
@@ -95,10 +95,8 @@
 	</tr></td>
 	<tr><td>
 		<i>Muscle Synergies in Joystick Manipulation.</i> Cai, L., Yan, S., Ouyang C., Zhang, T., Zhu, J., Chen, L., Ma, X.*, and Liu, H.* (2023). Frontiers in Physiology. <br>
-		<!--
-		&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
-		-->
 		<a href="https://scholar.google.com/scholar?q=Muscle+Synergies+in+Joystick+Manipulation" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
+		&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.semanticscholar.org/paper/Muscle-synergies-in-joystick-manipulation-Cai-Yan/b8f4cacd594fed0ec79a4f7b966d22673e864719" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
 		&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.researchgate.net/publication/374675206_Muscle_synergies_in_joystick_manipulation" target="_blank" rel="noopener noreferrer"><img src="images/ResearchGate.png" height="15"></a>
 		&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.frontiersin.org/articles/10.3389/fphys.2023.1282295/full" target="_blank" rel="noopener noreferrer"><img src="images/Frontiers.png" height="15"></a>
 		&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.csl.uni-bremen.de/cms/publications/bibtexbrowser.php?key=cai2023joystick&bib=csl_all_publications.bib" target="_blank" rel="noopener noreferrer"><img src="images/CSL.svg" height="15"></a>
@@ -106,10 +104,8 @@
 	</tr></td>
 	<tr><td>
 		<i>Outlier Detection Using Iterative Adaptive Mini-Minimum Spanning Tree Generation with Applications on Medical Data.</i> Li, J., Li, JW, Wang, C, Verbeek, F.J.*, Schultz T., and Liu H.* (2023). Frontiers in Physiology.<br>
-		<!--
-		&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
-		-->
 		<a href="https://scholar.google.com/scholar?q=Outlier+Detection+Using+Iterative+Adaptive+Mini-Minimum+Spanning+Tree+Generation+with+Applications+on+Medical+Data" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
+		&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.semanticscholar.org/paper/Outlier-detection-using-iterative-adaptive-spanning-Li-Li/fb0fc149b382ef5ce415b44b35ab7352a0eb4b46" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
 		&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.researchgate.net/publication/374675183_Outlier_detection_using_iterative_adaptive_mini-minimum_spanning_tree_generation_with_applications_on_medical_data" target="_blank" rel="noopener noreferrer"><img src="images/ResearchGate.png" height="15"></a>
 		&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.frontiersin.org/articles/10.3389/fphys.2023.1233341/full" target="_blank" rel="noopener noreferrer"><img src="images/Frontiers.png" height="15"></a>
 		&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.csl.uni-bremen.de/cms/publications/bibtexbrowser.php?key=li2023outlier_detection&bib=csl_all_publications.bib" target="_blank" rel="noopener noreferrer"><img src="images/CSL.svg" height="15"></a>
