--- a/reviewer.html
+++ b/reviewer.html
@@ -20,6 +20,7 @@
 		&#9679; Biomedical Signal Processing and Control<br>
 		<br>
 		<img src="images/IOP.png" height="20"><br>
+		<a href="images/IOP_Certificate.png" target="_blank" rel="noopener noreferrer"><b>IOP Trusted Reviewer</b></a> in recognition of <i>an exceptionally high level of peer review competency</i><br>
 		&#9679; Physiological Measurement<br>
 		&#9679; Engineering Research Express<br>		
 		<br>
