--- a/researchcn.html
+++ b/researchcn.html
@@ -213,7 +213,7 @@
 					<td>
 						&#9679; 20余本期刊，包括Nat. Commun.、Biomed. Signal Process. Control、Remote Sens.、Front. Physiol.、Front. Med.、Physiol. Meas.、ISPRS Int. J. Geo-Inf.、Biomimetics、Biosensors<br>
 						&#9679; 多个国际会议, 包括IEEE BSN, BHI; ACM ICMI, ISWC, AUTOMOTIVEUI; ITP<br>
-						&#9679; <a href="images/IOP_Certificate.png" target="_blank" rel="noopener noreferrer">IOP Trusted Reviewer</a> 表彰高水平同行评审能力
+						&#9679; <a href="images/IOP_Certificate.png" target="_blank" rel="noopener noreferrer">IOP Trusted Reviewer</a> 表彰“极其高水平的同行评审胜任力”（<i>an exceptionally high level of peer review competency</i>）
 					</td>
 				</tr>
 				<tr>
