--- a/reviewer.html
+++ b/reviewer.html
@@ -42,6 +42,7 @@
 		&#9679; Biosensors<br>
 		&#9679; Brain Sciences<br>
 		&#9679; Buildings<br>
+		&#9679; Data<br>
 		&#9679; Diagnostics<br>
 		&#9679; Electronics<br>
 		&#9679; Entropy<br>
