--- a/art.html
+++ b/art.html
@@ -21,7 +21,8 @@
 				&nbsp;&nbsp;<a href="index.html">Home</a>&nbsp;&nbsp;&nbsp;&nbsp;
 				<a href="research.html">Academics</a>&nbsp;&nbsp;&nbsp;&nbsp;
 				<a>Art</a>&nbsp;&nbsp;&nbsp;&nbsp;
-				<a href="tree.html">Family Tree</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+				<a href="academictree.html">Academic Genealogy</a>&nbsp;&nbsp;&nbsp;&nbsp;
+				<a href="arttree.html">Artistic Genealogy</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 				<a href="artcn.html"><font color="#5080E0" size="2">简体中文</font></a>
 			</font></h3>
 		</div>
@@ -523,7 +524,8 @@
 				&nbsp;&nbsp;<a href="index.html">Home</a>&nbsp;&nbsp;&nbsp;&nbsp;
 				<a href="research.html">Academics</a>&nbsp;&nbsp;&nbsp;&nbsp;
 				<a>Art</a>&nbsp;&nbsp;&nbsp;&nbsp;
-				<a href="tree.html">Family Tree</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+				<a href="academictree.html">Academic Genealogy</a>&nbsp;&nbsp;&nbsp;&nbsp;
+				<a href="arttree.html">Artistic Genealogy</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 				<a href="artcn.html"><font color="#5080E0" size="2">简体中文</font></a>
 			</font></h3></td></tr>
 			
