--- a/indexcn.html
+++ b/indexcn.html
@@ -24,7 +24,8 @@
 					<a><font color="#FFFFFF">首 页</font></a>&nbsp;&nbsp;&nbsp;&nbsp;
 					<a href="researchcn.html">学 术</a>&nbsp;&nbsp;&nbsp;&nbsp;
 					<a href="artcn.html">艺 术</a>&nbsp;&nbsp;&nbsp;&nbsp;
-					<a href="treecn.html">族 谱</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+					<a href="academictreecn.html">学术族谱</a>&nbsp;&nbsp;&nbsp;&nbsp;
+					<a href="arttreecn.html">艺术族谱</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 					<a href="index.html"><img src="images/EN.svg" height="15" class="pop"></a>
 				</font>
 			</h3>
