--- a/research.html
+++ b/research.html
@@ -22,7 +22,8 @@
 				&nbsp;&nbsp;<a href="index.html">Home</a>&nbsp;&nbsp;&nbsp;&nbsp;
 				<a>Academics</a>&nbsp;&nbsp;&nbsp;&nbsp;
 				<a href="art.html">Art</a>&nbsp;&nbsp;&nbsp;&nbsp;
-				<a href="tree.html">Family Tree</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+				<a href="academictree.html">Academic Genealogy</a>&nbsp;&nbsp;&nbsp;&nbsp;
+				<a href="arttree.html">Artistic Genealogy</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 				<a href="researchcn.html"><font color="#5080E0" size="2">简体中文</font></a>
 			</font></h3>
 		</div>
@@ -530,7 +531,8 @@
 				&nbsp;&nbsp;<a href="index.html">Home</a>&nbsp;&nbsp;&nbsp;&nbsp;
 				<a>Academics</a>&nbsp;&nbsp;&nbsp;&nbsp;
 				<a href="art.html">Art</a>&nbsp;&nbsp;&nbsp;&nbsp;
-				<a href="tree.html">Family Tree</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+				<a href="academictree.html">Academic Genealogy</a>&nbsp;&nbsp;&nbsp;&nbsp;
+				<a href="arttree.html">Artistic Genealogy</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 				<a href="researchcn.html"><font color="#5080E0" size="2">简体中文</font></a>
 			</font></h3></td></tr>
 
