--- a/artcn.html
+++ b/artcn.html
@@ -21,7 +21,8 @@
 				&nbsp;&nbsp;<a href="indexcn.html">首 页</a>&nbsp;&nbsp;&nbsp;&nbsp;
 				<a href="researchcn.html">学 术</a>&nbsp;&nbsp;&nbsp;&nbsp;
 				<a>艺 术</a>&nbsp;&nbsp;&nbsp;&nbsp;
-				<a href="treecn.html">族 谱</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+				<a href="academictreecn.html">学术族谱</a>&nbsp;&nbsp;&nbsp;&nbsp;
+				<a href="arttreecn.html">艺术族谱</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 				<a href="art.html"><img src="images/EN.svg" height="15"></a>
 			</font></h3>
 		</div>
@@ -706,8 +707,9 @@
 				&nbsp;&nbsp;<a href="indexcn.html">首 页</a>&nbsp;&nbsp;&nbsp;&nbsp;
 				<a href="researchcn.html">学 术</a>&nbsp;&nbsp;&nbsp;&nbsp;
 				<a>艺 术</a>&nbsp;&nbsp;&nbsp;&nbsp;
-				<a href="treecn.html">族 谱</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-				<a href="art.html"><font color="#5080E0" size="2">English</font></a>
+				<a href="academictreecn.html">学术族谱</a>&nbsp;&nbsp;&nbsp;&nbsp;
+				<a href="arttreecn.html">艺术族谱</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+				<a href="art.html"><img src="images/EN.svg" height="15"></a>
 			</font></h3></td></tr>
 			
 			<tr><td></td></tr>
