--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
 					<a><font color="#FFFFFF">Home</font></a>&nbsp;&nbsp;&nbsp;&nbsp;
 					<a href="research.html">Academics</a>&nbsp;&nbsp;&nbsp;&nbsp;
 					<a href="art.html">Art</a>&nbsp;&nbsp;&nbsp;&nbsp;
-					<a href="tree.html">Family Tree</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+					<a href="academictree.html">Academic Genealogy</a>&nbsp;&nbsp;&nbsp;&nbsp;
+					<a href="arttree.html">Artistic Genealogy</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 					<a href="indexcn.html"><font color="#5080E0" size="2">简体中文</font></a>
 				</font>
 			</h3>
