--- a/researchcn.html
+++ b/researchcn.html
@@ -23,7 +23,8 @@
 				&nbsp;&nbsp;<a href="indexcn.html">首 页</a>&nbsp;&nbsp;&nbsp;&nbsp;
 				<a>学 术</a>&nbsp;&nbsp;&nbsp;&nbsp;
 				<a href="artcn.html">艺 术</a>&nbsp;&nbsp;&nbsp;&nbsp;
-				<a href="treecn.html">族 谱</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+				<a href="academictreecn.html">学术族谱</a>&nbsp;&nbsp;&nbsp;&nbsp;
+				<a href="arttreecn.html">艺术族谱</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 				<a href="research.html"><img src="images/EN.svg" height="15"></a>
 			</font></h3>
 		</div>
@@ -532,7 +533,8 @@
 				&nbsp;&nbsp;<a href="indexcn.html">首 页</a>&nbsp;&nbsp;&nbsp;&nbsp;
 				<a>学 术</a>&nbsp;&nbsp;&nbsp;&nbsp;
 				<a href="artcn.html">艺 术</a>&nbsp;&nbsp;&nbsp;&nbsp;
-				<a href="treecn.html">族 谱</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+				<a href="academictreecn.html">学术族谱</a>&nbsp;&nbsp;&nbsp;&nbsp;
+				<a href="arttreecn.html">艺术族谱</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 				<a href="research.html"><img src="images/EN.svg" height="15"></a>
 			</font></h3></td></tr>
 
