--- a/cover.html
+++ b/cover.html
@@ -16,7 +16,7 @@
 		</td>
 		<td><audio controls>
 			<source src="audios/.mp3" type="audio/mpeg">
-		</audio> <a href="><img src="images/Download.png" height="15"></a></td>
+		</audio> <a href=""><img src="images/Download.png" height="15"></a></td>
 	</tr>
 	-->
 
@@ -80,6 +80,9 @@
 		</audio> <a href="https://seafile.zfn.uni-bremen.de/f/14670d7ccac84d5880b0/?dl=1"><img src="images/Download.png" height="15"></a></td>
 	</tr>
 
+	<tr><td></td></tr>
+	<tr><td></td></tr>
+
 	<tr>
 		<td>
 			&#9679; 『花~すべての人の心に花を～』- 喜纳友子<br>&nbsp;&nbsp;
@@ -89,8 +92,6 @@
 			<source src="audios/花~すべての人の心に花を～.mp3" type="audio/mpeg">
 		</audio> <a href="https://seafile.zfn.uni-bremen.de/f/436c1430612a4fb09755/?dl=1"><img src="images/Download.png" height="15"></a></td>
 	</tr>
-
-	<tr><td></td></tr>
 
 	<tr>
 		<td>
@@ -113,6 +114,7 @@
 		</audio> <a href="https://seafile.zfn.uni-bremen.de/f/c7dfb2498dcb4d88b99a/?dl=1"><img src="images/Download.png" height="15"></a></td>
 	</tr>
 
+	<tr><td></td></tr>
 	<tr><td></td></tr>
 
 	<tr>
@@ -144,6 +146,16 @@
 		<td><audio controls>
 			<source src="audios/愛のメモリー.mp3" type="audio/mpeg">
 		</audio> <a href="https://seafile.zfn.uni-bremen.de/f/acbb3cd993e34f849994/?dl=1"><img src="images/Download.png" height="15"></a></td>
+	</tr>
+	
+	<tr>
+		<td>
+			&#9679; 『石狩挽歌』- 北原ミレイ<br>&nbsp;&nbsp;
+			作詞：なかにし礼／作曲：浜圭介
+		</td>
+		<td><audio controls>
+			<source src="audios/石狩挽歌.mp3" type="audio/mpeg">
+		</audio> <a href="https://seafile.zfn.uni-bremen.de/f/ab2621adb816416daabd/?dl=1"><img src="images/Download.png" height="15"></a></td>
 	</tr>
 
 	<tr>
@@ -184,6 +196,16 @@
 		<td><audio controls>
 			<source src="audios/越冬つばめ.mp3" type="audio/mpeg">
 		</audio> <a href="https://seafile.zfn.uni-bremen.de/f/282e868b858649859883/?dl=1"><img src="images/Download.png" height="15"></a></td>
+	</tr>
+
+	<tr>
+		<td>
+			&#9679; 『男と女のラブゲーム』- 葵司朗 / 日野美歌<br>&nbsp;&nbsp;
+			作詞：魚住勉／作曲：馬飼野康二
+		</td>
+		<td><audio controls>
+			<source src="audios/男と女のラブゲーム.mp3" type="audio/mpeg">
+		</audio> <a href="https://seafile.zfn.uni-bremen.de/f/410bfa96260f4aa3a72e/?dl=1"><img src="images/Download.png" height="15"></a></td>
 	</tr>
 
 	<tr>
