--- a/artcn.html
+++ b/artcn.html
@@ -33,7 +33,11 @@
 			<tr><td><h1 align="left"><span style="text-decoration: overline">主要现任职务</span></h1></td></tr>
 			<tr><td><table align="left" cellpadding="15">
 				<tr>
-					<td><b>德国曲协</b> 主席<br><br><br><br><br><br><b>中国曲艺家协会</b> 会员</td>
+					<td>
+						<b>德国曲协</b> 主席<br><br><br>
+						<b>中国曲艺家协会</b> 会员<br><br><br>
+						师从相声艺术家姜昆
+					</td>
 					<td><a href="images/DeQuYi.png" target="_blank" rel="noopener noreferrer"><img src="images/DeQuYi.png" width="350"></a></td>
 				</tr>
 				<tr>
@@ -454,7 +458,7 @@
 
 			<tr><td><h1 align="left"><span style="text-decoration: overline">艺术获奖摘要</span></h1></td></tr>
 			<tr><td><table align="left" cellpadding="15">
-				<tr><td>2020—2022</td><td>“文化中国·水立方杯”中文歌曲大赛</td><td>指导多位学生分获金奖（2020、2021、2022）、银奖（2021）和特别奖（2022）</td></tr>	
+				<tr><td>2020—2023</td><td>“文化中国·水立方杯”中文歌曲大赛</td><td>指导多位学生分获金奖（2020、2021、2022、2023）、银奖（2021）和特别奖（2022）</td></tr>	
 				<tr><td>2019</td><td>第十四届中国国际合唱节</td><td>作词和合唱谱改编作品《花瓣》获银奖</td></tr>	
 				<tr><td>2019</td><td>慕尼黑春晚</td><td>创意民乐表演和相声表演获观众现场投票最受欢迎节目奖</td></tr>
 				<tr><td>2018</td><td>哥廷根春晚</td><td>创意民乐表演、相声表演分获观众现场投票最佳节目第一、第二名</td></tr>
@@ -676,15 +680,6 @@
 					<td><video width="350" controls="controls">
 							<source src="videos/Plum_LQ.mp4" type="video/mp4" />
 					</video></td>
-				</tr>
-				<tr>
-					<td>
-						&#9679; 民族歌曲《吐鲁番的葡萄熟了》<br>&nbsp;&nbsp;
-						作词：瞿琮、作曲：施光南、原唱：罗天蝉
-					</td>
-					<td><audio controls>
-						<source src="audios/吐鲁番的葡萄熟了.mp3" type="audio/mpeg">
-					</audio> <a href="https://seafile.zfn.uni-bremen.de/f/2d76cb75172a4ddc9fbb/?dl=1"><img src="images/Download.png" height="15"></a></td>
 				</tr>
 				<tr><td></td></tr>
 				<tr><td><h3>演歌·歌謡曲カバー選</h3></td></tr>
