--- a/indexcn.html
+++ b/indexcn.html
@@ -61,7 +61,7 @@
 		<br><br><br><br><br>
 		
 		<p align="center"><font size="4" color="#A9FCE3">最后更新：12/2023</font></p>
-		<p align="center"><font size="1" color="#000000"><a href="indexenka.html"><img src="images/Patch.png" height="20"></font></p>
+		<p align="right"><font size="1" color="#000000"><a href="indexenka.html"><img src="images/Patch.png" height="20"></font></p>
 		<br>
 	</body>
 </html>
