--- a/studentscn.html
+++ b/studentscn.html
@@ -152,7 +152,7 @@
 			<tr>
 				<td align="center">
 					<img src="images/students/Steffen_Lahrberg.jpg" width="150"></a><br>
-					<b>Steffen Lahrberg（德）</b>
+					&copy;<b>Steffen Lahrberg（德）</b>
 				</td>
 				<td>
 					本科毕设 2022 @ 德国不来梅（满分）<br>
@@ -192,7 +192,7 @@
 			<tr>
 				<td align="center">
 					<img src="images/students/Jonas_Boule.jpg" width="150"></a><br>
-					<b>Jonas Boule（德）</b>
+					&copy;<b>Jonas Boule（德）</b>
 				</td>
 				<td>
 					科研助理 自2023<br>
@@ -338,7 +338,7 @@
 			<tr>
 				<td align="center">
 					<img src="images/students/Jiumeng_Chen.jpg" width="150"></a><br>
-					@<b>陈久盟</b>
+					&copy;<b>陈久盟</b>
 				</td>
 				<td>
 					毕设进行<br>
@@ -350,7 +350,7 @@
 			<tr>
 				<td align="center">
 					<img src="images/students/Joel_Warnken.jpg" width="150"></a><br>
-					@<b>Joel Warnken（德）</b>
+					&copy;<b>Joel Warnken（德）</b>
 				</td>
 				<td>
 					毕设进行<br>
@@ -362,7 +362,7 @@
 			<tr>
 				<td align="center">
 					<img src="images/students/Mohamad_Tofayel_Ahmed.jpg" width="150"></a><br>
-					<b>Mohamad Tofayel Ahmed（孟）</b>
+					&copy;<b>Mohamad Tofayel Ahmed（孟）</b>
 				</td>
 				<td>
 					毕设进行<br>
@@ -373,7 +373,7 @@
 			<tr>
 				<td align="center">
 					<img src="images/students/Mohamad_Asif_Siddiqui.jpg" width="150"></a><br>
-					<b>@Mohamad Asif Siddiqui（孟）</b>
+					&copy;<b>Mohamad Asif Siddiqui（孟）</b>
 				</td>
 				<td>
 					毕设进行<br>
@@ -396,7 +396,7 @@
 			<tr>
 				<td align="center">
 					<img src="images/students/Aklima_Akter.jpg" width="150"></a><br>
-					<b>@Aklima Akter（孟）</b>
+					&copy;<b>Aklima Akter（孟）</b>
 				</td>
 				<td>
 					毕设进行<br>
@@ -404,11 +404,23 @@
 				</td>
 			</tr>
 
+			<tr>
+				<td align="center">
+					<img src="images/students/Yvo_Muskulus.jpg" width="150"></a><br>
+					&copy;<b>Yvo Muskulus（德）</b>
+				</td>
+				<td>
+					科研助理 自2023<br>
+					&nbsp;&nbsp;&nbsp;&nbsp;&#9679; 基于肌电的表情识别人工智能
+				</td>
+			</tr>
+
+
 			<!--
 			<tr>
 				<td align="center">
 					<img src="images/students/.jpg" width="150"></a><br>
-					<b></b>
+					&copy;<b></b>
 				</td>
 				<td>
 					毕设 202 @ 德国不来梅<br>
