--- a/students.html
+++ b/students.html
@@ -153,7 +153,7 @@
 			<tr>
 				<td align="center">
 					<img src="images/students/Steffen_Lahrberg.jpg" width="150"></a><br>
-					<b>Steffen Lahrberg</b>
+					&copy;<b>Steffen Lahrberg</b>
 				</td>
 				<td>
 					Bachelor thesis 2022 @ Bremen, Germany (full score)<br>
@@ -193,7 +193,7 @@
 			<tr>
 				<td align="center">
 					<img src="images/students/Jonas_Boule.jpg" width="150"></a><br>
-					<b>Jonas Boule</b>
+					&copy;<b>Jonas Boule</b>
 				</td>
 				<td>
 					Research assistant since 2023<br>
@@ -339,7 +339,7 @@
 			<tr>
 				<td align="center">
 					<img src="images/students/Jiumeng_Chen.jpg" width="150"></a><br>
-					@<b>Jiumeng Chen</b>
+					&copy;<b>Jiumeng Chen</b>
 				</td>
 				<td>
 					Graduation research in progress<br>
@@ -351,7 +351,7 @@
 			<tr>
 				<td align="center">
 					<img src="images/students/Joel_Warnken.jpg" width="150"></a><br>
-					@<b>Joel Warnken</b>
+					&copy;<b>Joel Warnken</b>
 				</td>
 				<td>
 					Graduation research in progress<br>
@@ -363,7 +363,7 @@
 			<tr>
 				<td align="center">
 					<img src="images/students/Mohamad_Tofayel_Ahmed.jpg" width="150"></a><br>
-					<b>@Mohamad Tofayel Ahmed</b>
+					&copy;<b>Mohamad Tofayel Ahmed</b>
 				</td>
 				<td>
 					Graduation research in progress<br>
@@ -374,7 +374,7 @@
 			<tr>
 				<td align="center">
 					<img src="images/students/Mohamad_Asif_Siddiqui.jpg" width="150"></a><br>
-					<b>@Mohamad Asif Siddiqui</b>
+					&copy;<b>Mohamad Asif Siddiqui</b>
 				</td>
 				<td>
 					Graduation research in progress<br>
@@ -385,7 +385,7 @@
 			<tr>
 				<td align="center">
 					<img src="images/students/Arthur_Belousov.jpg" width="150"></a><br>
-					<b>@Arthur Belousov</b>
+					&copy;<b>Arthur Belousov</b>
 				</td>
 				<td>
 					Graduation research in progress<br>
@@ -397,13 +397,25 @@
 			<tr>
 				<td align="center">
 					<img src="images/students/Aklima_Akter.jpg" width="150"></a><br>
-					<b>@Aklima Akter</b>
+					&copy;<b>Aklima Akter</b>
 				</td>
 				<td>
 					Graduation research in progress<br>
 					&nbsp;&nbsp;&nbsp;&nbsp;&#9679; Advanced data processing for Wi-Fi-based HAR
 				</td>
 			</tr>
+			
+			<tr>
+				<td align="center">
+					<img src="images/students/Yvo_Muskulus.jpg" width="150"></a><br>
+					&copy;<b>Yvo Muskulus</b>
+				</td>
+				<td>
+					Research assistant since 2023<br>
+					&nbsp;&nbsp;&nbsp;&nbsp;&#9679; EMG-based action unit recognition
+				</td>
+			</tr>
+
 
 			<!--
 			<tr>
