--- a/enkas/さ.html
+++ b/enkas/さ.html
@@ -381,7 +381,7 @@
 いろいろあって　いま　独り<br>
 ああ　いま　独り<br>
 <br>
-2 <ruby><rb>拗</rb><rt>すね</rt></ruby>ねて生きてる　<ruby><rb>訳</rb><rt>わけ</rt></ruby>ではないが<br>
+2 <ruby><rb>拗</rb><rt>す</rt></ruby>ねて生きてる　<ruby><rb>訳</rb><rt>わけ</rt></ruby>ではないが<br>
 酒と仲良し　安酒場<br>
 人生は　<ruby><rb>表</rb><rt>おもて</rt></ruby>があるから　<ruby><rb>裏</rb><rt>うら</rt></ruby>がある<br>
 裏は知りたく　なかったが<br>
