--- a/reviewer.html
+++ b/reviewer.html
@@ -22,7 +22,8 @@
 		<img src="images/IOP.png" height="20"><br>
 		<a href="images/IOP_Certificate.png" target="_blank" rel="noopener noreferrer"><b>IOP Trusted Reviewer</b></a> in recognition of <i>an exceptionally high level of peer review competency</i><br>
 		&#9679; Physiological Measurement<br>
-		&#9679; Engineering Research Express<br>		
+		&#9679; Physica Scripta<br>
+		&#9679; Engineering Research Express<br>
 		<br>
 		<img src="images/Frontiers.png" height="25" class="pop1"><br>
 		&#9679; Frontiers in Physilogy<br>
@@ -49,6 +50,7 @@
 		&#9679; Informatics<br>
 		&#9679; Information<br>
 		&#9679; Journal of Personalized Medicine<br>
+		&#9679; Machines<br>
 		&#9679; Micromachines<br>
 		&#9679; Remote Sensing<br>
 		&#9679; Sensors<br>
