--- a/research.html
+++ b/research.html
@@ -209,7 +209,7 @@
 				<tr>
 					<td align="center"><a href="reviewer.html" target="_blank" rel="noopener noreferrer">Reviewer</a></td>
 					<td>
-						&#9679; For over 20 journals, including Nat. Commun., Biomed. Signal Process. Control, Remote Sens., Front. Physiol., Front. Med., Physiol. Meas., ISPRS Int. J. Geo-Inf., Biomimetics, and Biosensors<br>
+						&#9679; For 33 journals, including Nat. Commun., Biomed. Signal Process. Control, Remote Sens., Front. Physiol., Front. Med., Physiol. Meas., Phys. Scr., ISPRS Int. J. Geo-Inf., Biomimetics, and Biosensors<br>
 						&#9679; For various conferences, including IEEE BSN, BHI; ACM ICMI, ISWC, AUTOMOTIVEUI; ITP<br>
 						&#9679; <a href="images/IOP_Certificate.png" target="_blank" rel="noopener noreferrer">IOP Trusted Reviewer</a> in recognition of <i>an exceptionally high level of peer review competency</i>
 					</td>
