--- a/reviewer.html
+++ b/reviewer.html
@@ -18,6 +18,7 @@
 		<br>
 		<img src="images/Elsevier.png" height="20" class="pop1"> <img src="images/ScienceDirect.png" height="20" class="pop1"><br>
 		&#9679; Biomedical Signal Processing and Control<br>
+		&#9679; IFAC Journal of Systems and Control<br>		
 		<br>
 		<img src="images/IOP.png" height="20"><br>
 		<a href="images/IOP_Certificate.png" target="_blank" rel="noopener noreferrer"><b>IOP Trusted Reviewer</b></a> in recognition of <i>an exceptionally high level of peer review competency</i><br>
