--- a/reviewer.html
+++ b/reviewer.html
@@ -35,9 +35,13 @@
 		<img src="images/ISPRS.png" height="25" class="pop1"><br>
 		&#9679; ISPRS International Journal of Geo-Information<br>
 		<br>
+		<img src="images/ACCSCIENCE.png" height="25" class="pop1"><br>
+		&#9679; Arts & Communication<br>
+		<br>
 		<img src="images/MDPI.png" height="25" class="pop1"><br>
 		&#9679; Algorithms<br>
 		&#9679; Applied Sciences<br>
+		&#9679; Axioms<br>
 		&#9679; Big Data and Cognitive Computing<br>
 		&#9679; Biomedicines<br>
 		&#9679; Biomimetics<br>
@@ -48,6 +52,7 @@
 		&#9679; Diagnostics<br>
 		&#9679; Electronics<br>
 		&#9679; Entropy<br>
+		&#9679; Foods<br>
 		&#9679; Informatics<br>
 		&#9679; Information<br>
 		&#9679; Journal of Personalized Medicine<br>
