--- a/studentscn.html
+++ b/studentscn.html
@@ -29,6 +29,7 @@
 				<img src="images/IN.png" height="40"> 
 				<img src="images/IR.png" height="40"> 
 				<img src="images/TR.png" height="40"> 
+				<img src="images/VN.png" height="40">
 			</td></tr>
 
 			<tr><td align="center" colspan="2">
@@ -243,7 +244,7 @@
 			<tr>
 				<td align="center">
 					<img src="images/students/Ciwan_Gülpinar.jpg" width="150"></a><br>
-					&copy;<b>Ciwan Gülpinar（德；库尔德）</b>
+					&copy;<b>Ciwan Gülpinar（德；库尔德裔）</b>
 				</td>
 				<td>
 					本科毕设 2023 @ 德国不来梅<br>
@@ -415,6 +416,16 @@
 				</td>
 			</tr>
 
+			<tr>
+				<td align="center">
+					<img src="images/students/Alenna_Kha.jpg" width="150"></a><br>
+					&copy;<b>Alenna Kha（德；越南裔）</b>
+				</td>
+				<td>
+					毕设进行<br>
+					&nbsp;&nbsp;&nbsp;&nbsp;&#9679; 基于旋律的和弦自动生成
+				</td>
+			</tr>
 
 			<!--
 			<tr>
