--- a/supervision.html
+++ b/supervision.html
@@ -14,6 +14,7 @@
 	<tr><td>2021</td><td>Steffen Lahrberg</td><td>Direction Distinguishment in Wearable Sensor-Based Human Activity Recognition Using Cross-Channel Features</td></tr>
 	<tr><td>2022</td><td>Tobias Dellert</td><td>Data Pipeline in AWS for Real-Time Workload-Monitoring Using HRV- and Inertial-Sensor Data via Mobile APP</td></tr>
 	<tr><td>2022</td><td>Wei Wang</td><td>Towards Automatic Heart Sound Segmentation</td></tr>
+	<tr><td>2023</td><td>Ciwan Gülpinar</td><td>Development of a Virtual Reality Application for the Real-Time Visualization and Archiving of Biosignals</td></tr>
 	<!--
 	<tr><td>20</td><td>Name</td><td>Title</td></tr>
 	-->
