--- a/students.html
+++ b/students.html
@@ -28,7 +28,8 @@
 				<img src="images/KD.png" height="40"> 
 				<img src="images/IN.png" height="40"> 
 				<img src="images/IR.png" height="40"> 
-				<img src="images/TR.png" height="40"> 
+				<img src="images/TR.png" height="40">
+				<img src="images/VN.png" height="40">
 			</td></tr>
 
 			<tr><td align="center" colspan="2">
@@ -416,6 +417,16 @@
 				</td>
 			</tr>
 
+			<tr>
+				<td align="center">
+					<img src="images/students/Alenna_Kha.jpg" width="150"></a><br>
+					&copy;<b>Alenna Kha</b>
+				</td>
+				<td>
+					Graduation research in progress<br>
+					&nbsp;&nbsp;&nbsp;&nbsp;&#9679; Melody-based automatical chord generation
+				</td>
+			</tr>
 
 			<!--
 			<tr>
