--- a/reviewer.html
+++ b/reviewer.html
@@ -28,6 +28,7 @@
 		<br>
 		<img src="images/Frontiers.png" height="25" class="pop1"><br>
 		&#9679; Frontiers in Physilogy<br>
+		&#9679; Frontiers in Bioengineering and Biotechnology<br>
 		&#9679; Frontiers in Medicine<br>
 		&#9679; Frontiers in Big Data<br>
 		&#9679; Frontiers in Artificial Intelligence<br>
